--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,6 +31,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Poppins';
+    src: url('/font/Poppins/Poppins-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
 /* Gilroy */
 @font-face {
     font-family: 'Gilroy';
@@ -75,6 +82,8 @@
     --font-weight-poppins-light: 300;
     --font-weight-poppins-extralight: 200;
     --font-weight-poppins-medium: 500;
+    --font-weight-poppins-bold: 700;
+    --font-weight-poppins-semibold: 600;
 
     /* Gilroy */
     --font-family-gilroy: 'Gilroy', sans-serif;
@@ -108,6 +117,14 @@
 
 .font-poppins-medium {
     font-weight: var(--font-weight-poppins-medium);
+}
+
+.font-poppins-bold {
+    font-weight: var(--font-weight-poppins-bold);
+}
+
+.font-poppins-semibold {
+    font-weight: var(--font-weight-poppins-semibold);
 }
 
 .font-gilroy-regular {
