--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,3 +3,128 @@
     -webkit-text-stroke: 1.4px black; /* Adjust the width and color as needed */
     color: transparent; /* This makes the fill color transparent */
 }
+
+:root {
+    --border-color: #000;
+    --primary-color: #020303;
+    --secondary-color: #F8DCE0;
+    --accent-color: #F8DCE0;
+    --background-color: #fff;
+    --text-color: #000;
+    --input-border-color: #000;
+    --label-background-color: #fff;
+    --label-focus-color: #000;
+    --button-text-color: #fff;
+    --button-border-color: #1034aa;
+    --button-border-bottom-color: #90c2ff;
+    --button-box-shadow-color: rgba(0, 13, 56, 0.28);
+    --button-inset-shadow-light: #0070f0;
+    --button-inset-shadow-dark: #002cbb;
+}
+
+.signin-form-container .container {
+    /* border: solid 1px var(--border-color); */
+    padding: 20px;
+    border-radius: 20px;
+    /* background-color: var(--background-color); */
+}
+
+.signin-form-container .container .heading {
+    font-size: 1.3rem;
+    margin-bottom: 20px;
+    /* font-weight: bolder; */
+}
+
+.signin-form-container .form {
+    /* max-width: 300px; */
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.signin-form-container .form .btn-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.signin-form-container .form .btn {
+    padding: 10px 20px;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    border-radius: 10px;
+    border: solid 1px var(--button-border-color);
+    border-bottom: solid 1px var(--button-border-bottom-color);
+    background: linear-gradient(
+        135deg,
+        var(--primary-color),
+        var(--secondary-color)
+    );
+    color: var(--button-text-color);
+    font-weight: bolder;
+    transition: all 0.2s ease;
+    box-shadow: 0px 2px 3px var(--button-box-shadow-color),
+        inset 0px 4px 5px var(--button-inset-shadow-light),
+        inset 0px -4px 5px var(--button-inset-shadow-dark);
+}
+
+.signin-form-container .form .btn:active {
+    box-shadow: inset 0px 4px 5px var(--button-inset-shadow-light),
+        inset 0px -4px 5px var(--button-inset-shadow-dark);
+    transform: scale(0.995);
+}
+
+.signin-form-container .input-field {
+    position: relative;
+}
+
+.signin-form-container .input-field label {
+    position: absolute;
+    color: var(--text-color);
+    pointer-events: none;
+    background-color: transparent;
+    left: 15px;
+    transform: translateY(0.6rem);
+    transition: all 0.3s ease;
+}
+
+.signin-form-container .input-field input {
+    /* padding: 10px 15px; */
+    font-size: 1rem;
+    border-radius: 8px;
+    border: solid 1px var(--input-border-color);
+    letter-spacing: 1px;
+    width: 100%;
+}
+
+.signin-form-container .input-field input:focus,
+.signin-form-container .input-field input:valid {
+    outline: none;
+    border: solid 1px var(--primary-color);
+}
+
+.signin-form-container .input-field input:focus ~ label,
+.signin-form-container .input-field input:valid ~ label {
+    transform: translateY(-51%) translateX(-10px) scale(0.8);
+    background-color: var(--label-background-color);
+    padding: 0px 5px;
+    color: var(--label-focus-color);
+    font-weight: bold;
+    letter-spacing: 1px;
+    border: none;
+    border-radius: 100px;
+}
+
+.signin-form-container .form .passicon {
+    cursor: pointer;
+    font-size: 1.3rem;
+    position: absolute;
+    top: 6px;
+    right: 8px;
+}
+
+.signin-form-container .form .close {
+    display: none;
+}
